--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
     <div id=div-main>
